# oximeter-telegram-bot

./: Procfile  README.md  pyproject.toml  requirements.txt
oximeter/: bot.py
tests/: test_oximeter_telegram_bot.py
